# solana-copy-trade-detect

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.sh
.github/workflows/: ci.yml  release.yml  test.yml
src/: args.rs  core.rs  error.rs  lib.rs  macros.rs  main.rs
tests/: basic.rs
tests/common/: mod.rs
