[package]
name = "solana-copy-trade-detect"
version = "0.1.3"
edition = "2021"
description = "Detects if a given Solana wallet is copy trading."
authors = ["Lezend"]
license = "MIT OR Apache-2.0"

[dependencies]
cielo-rs-sdk = "0.1.0"
clap = { version = "4.5.23", features = ["derive", "env"] }
console = "0.15.8"
dotenvy = "0.15.7"
indicatif = "0.17.9"
serde = "1.0.216"
serde_json = "1.0.133"
shyft-rs-sdk = "0.1.3"
solana-client = "2.1.6"
solana-sdk = "2.1.6"
solana-transaction-status = "2.1.6"
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[patch.crates-io]
# curve25519-dalek 3.x pin zeroize to <1.4
# which conflicts with other dependencies requiring zeroize ^1.5.
# We’re patching the crate to unpin zeroize.

# For curve25519-dalek we’re using commit from a PR, see
# https://github.com/dalek-cryptography/curve25519-dalek/pull/606
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8274d5cbb6fc3f38cdc742b4798173895cd2a290" }

[dev-dependencies]
assert_cmd = "2.0.16"
